# cactus

./: .gitignore  CACTUS_Demo.ipynb  CONTRIBUTING.md  LICENSE.md  README.md  disclaimer  huggingface_model_loaders.py  pyproject.toml  setup.cfg
Agent_Tutorials/: 01_Agent_Tutorial.ipynb  02_CACTUS_Tutorial.ipynb  0_introduction.ipynb  README.md
Notebooks/: Create_Tools.ipynb  LLM_Compare.ipynb
Notebooks/benchmark_files/: Result_gemma7b_prompt_qualitative.csv  Result_llama27b_chat_no_prompt_combined.csv  Result_phi2_no_prompt_quantitative_a100_80.csv  Result_phi2_no_prompt_quantitative_dlt.csv  Results_mpt7b_prompt_quantitative.csv  gemma7b_prompt_quantitative.csv  olmo1b_no_prompt_combined_dlv.csv  phi2_no_prompt_quantitative_dlt.csv  phi2_prompt_combined_a100_80.csv
Tools/: Brenk_Filter.py  Calculate_BBB_Permeant.py  Calculate_Druglikeness.py  Calculate_GI_Absorption.py  Calculate_LogP.py  Calculate_MolWt.py  Calculate_QED.py  Calculate_SA.py  Calculate_Similarity.py  Calculate_TPSA.py  Chemical_identifier_conversion.py  EXAMPLE_heavy_atom_counter.py  cid_to_SMILES.py  inchikey_to_SMILES.py  sample_convert_identifiers-v1.ipynb  sample_convert_identifiers-v1__1_.py
Tools/.ipynb_checkpoints/: sample_convert_identifiers-v1-checkpoint.ipynb
Tutorials/: 02_CACTUS_Tutorial.ipynb  03_AgentTutorial_with_ollama.ipynb  Agent_Tutorial.ipynb  CACTUS_Demo.ipynb  README  README.md
agent/: cactus.py
assets/: Cactus_logo_square.tiff
benchmark/: QuestionList.csv  QuestionsChem.csv  README.md  Result_gemini_no_prompt_quantitative_a100.csv  SingleStepQuestionList_Combined.csv  SingleStepQuestionList_Qualitative.csv  SingleStepQuestionList_Quantitative.csv  benchmark_creation.py  gemini_no_prompt_quantitative_a100.csv  plot_creation.py  plot_runtime.py  run.py  run_benchmark.py
benchmark/benchmark_files/: DataAnalysis.ipynb  Result_gemma7b_prompt_quantitative.csv  Result_olmo1b_prompt_combined_dlv.csv  Result_phi2_prompt_quantitative.csv  Results_Gemma7B_No_Prompt_Combined_fix.csv  llama27b_chat_prompt_combined.csv  phi2_no_prompt_combined_a100_80.csv  runtime.csv
benchmark/benchmark_files/Raw_Output/: falcon7b_no_prompt_combined.csv  falcon7b_prompt_combined.csv  gemini_prompt_quantitative_a100.csv  gemma7b_no_prompt_combined.csv  gemma7b_no_prompt_qualitative.csv  gemma7b_no_prompt_quantitative.csv  gemma7b_prompt_combined.csv  gemma7b_prompt_qualitative.csv  llama27b_chat_no_prompt_combined.csv  llama27b_no_prompt_qualitative_a100.csv  llama27b_no_prompt_quantitative_a100.csv  llama27b_prompt_qualitative_a100.csv  llama27b_prompt_quantitative_a100.csv  mistral7b_no_prompt_combined.csv  mistral7b_prompt_combined.csv  mpt7b_no_prompt_qualitative_a100.csv  mpt7b_no_prompt_quantitative.csv  mpt7b_prompt_qualitative_a100.csv  mpt7b_prompt_quantitative.csv  olmo1b_no_prompt_qualitative_dlt.csv  olmo1b_no_prompt_quantitative_dlt.csv  olmo1b_prompt_combined_dlv.csv  olmo1b_prompt_qualitative_dlt.csv  olmo1b_prompt_quantitative_dlt.csv  phi2_no_prompt_quantitative_a100_80.csv  phi2_no_prompt_quantitative_dlv.csv
benchmark/benchmark_files/Scored_Files/: Result_Falcon7b_noprompt_Qualitative_a100.csv  Result_Falcon7b_noprompt_Quantitative_a100.csv  Result_Falcon7b_prompt_Qualitative_a100.csv  Result_Falcon7b_prompt_Quantitative_a100.csv  Result_Llama3_no_prompt_Qualitative_a100.csv  Result_Llama3_no_prompt_Quantitative_a100.csv  Result_Llama3_prompt_Qualitative_a100.csv  Result_Llama3_prompt_Quantitative_a100.csv  Result_Mistral7b_no_prompt_Qualitative_a100.csv  Result_Mistral7b_no_prompt_Quantitative_a100.csv  Result_Mistral7b_prompt_Qualitative_a100.csv  Result_Mistral7b_prompt_Quantitative_a100.csv  Result_Phi_3_mini_4k_instruct_no_prompt_Qualitative_dlt.csv  Result_Phi_3_mini_4k_instruct_no_prompt_combined_dlt.csv  Result_Phi_3_mini_4k_instruct_noprompt_Quantitative_dlt.csv  Result_Phi_3_mini_4k_instruct_prompt_Qualitative_dlt.csv  Result_Phi_3_mini_4k_instruct_prompt_Quantitative_dlt.csv  Result_Phi_3_mini_4k_instruct_prompt_combined_dlt.csv  Result_gemini_prompt_quantitative_a100.csv  Result_gemma7b_no_prompt_qualitative.csv  Result_gemma7b_no_prompt_quantitative.csv  Result_llama27b_no_prompt_qualitative_a100.csv  Result_llama27b_no_prompt_quantitative_a100.csv  Result_llama27b_prompt_qualitative_a100.csv  Result_llama27b_prompt_quantitative_a100.csv  Result_llama3_no_prompt_combined_a100.csv  Result_llama3_prompt_combined_a100.csv  Result_llama3_prompt_combined_a100_1.csv  Result_mistral7b_no_prompt_combined.csv  Result_mpt7b_no_prompt_qualitative_a100.csv  Result_mpt7b_prompt_qualitative_a100.csv  Result_olmo1b_no_prompt_combined_dlv.csv  Result_olmo1b_no_prompt_qualitative_dlt.csv  Result_olmo1b_no_prompt_quantitative_dlt.csv  Result_olmo1b_prompt_qualitative_dlt.csv  Result_olmo1b_prompt_quantitative_dlt.csv  Result_phi2_no_prompt_combined_a100_80.csv  Result_phi2_no_prompt_quantitative.csv  Result_phi2_no_prompt_quantitative_dlv.csv  Result_phi2_prompt_combined_a100_80.csv  (+6 more)
cactus/: __init__.py
cactus/agent/: cactus.py
cactus/tools/: All_Functions_Compilation.py  Calculate_Similarity.py  cas_to_SMILES.py  chemblid_to_SMILES.py  molecular_formula_to_SMILES.py  zinc_id_to_SMILES.py
src/cactus/: __init__.py
src/cactus/agent/: README.md  __init__.py  anthropic_model_loader.py  cactus.py  gemini_model_loader.py  huggingface_model_loaders.py  openai_model_loader.py  palm_model_loader.py  prompts.py  tools.py  vllm_model_loaders.py
src/cactus/tools/: All_Functions_Compilation.py  Brenk_Filter.py  Calculate_BBB_Permeant.py  Calculate_Druglikeness.py  Calculate_GI_Absorption.py  Calculate_LogP.py  Calculate_MolWt.py  Calculate_QED.py  Calculate_SA.py  Calculate_Similarity.py  Calculate_TPSA.py  Chemical_identifier_conversion.py  Pains_Filter.py  __init__.py  brenk_filter.py  calculate_bbb_permeant.py  calculate_druglikeness.py  calculate_gi_absorption.py  calculate_logp.py  calculate_molwt.py  calculate_qed.py  calculate_sa.py  calculate_similarity.py  calculate_tpsa.py  cas_to_SMILES.py  cas_to_smiles.py  chemblid_to_SMILES.py  (+13 more)
tests/: test_cactus.py  test_tools.py
