##########################
# Setup.py Configuration #
##########################
[metadata]
name = cactus
version = 0.0.1-dev
description = LangChain Agent for Open Source Cheminformatics Chatbot
long_description = file: README.md
keywords = cheminformatics, LLM, Chatbot
license = BSD-2
classifiers =
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
	adme-pred @ git+https://github.com/mcnaughtonadm/adme-pred-py.git#egg=adme-pred-py-0.0.2
	accelerate
	bitsandbytes
	chembl-webresource-client
	class-resolver
	datasets
	duckduckgo-search
	flash-attn
	google-generativeai
	langchain
	matplotlib
	numpy
	openai
	pandas
	pubchempy
	rdkit
	sentencepiece
	smilite
	transformers
	torch==2.1.2
	torchaudio
	torchvision
	typing
	tiktoken	
	tqdm
    vllm
	wikipedia

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

[flake8]
ignore =
    S301
    S403
    S404
    S603
    W503
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 100
max-complexity = 20
application-import-names =
    cactus
    tests
	
[mypy]
ignore_missing_imports = True
	
